ticket/5d4/5d40b13384b0bc7762e2714302103b0fa9039214/8abbb3fe835fed6501703ade4e0a90a88c687dd0.txt
/_BUILDPATH_/buildMSW/bk-deps x86_64-w64-mingw32-g++ -c -o corelib_uxtheme.o  -D__WXMSW__      -DWXBUILDING      -I/_BUILDPATH_/src/regex -I/_BUILDPATH_/src/expat/lib -DwxUSE_BASE=0 -Wall -Wundef -Wunused-parameter -Wno-ctor-dtor-privacy -Woverloaded-virtual -D_FILE_OFFSET_BITS=64 -I/_BUILDPATH_/buildMSW/lib/wx/include/x86_64-w64-mingw32-msw-unicode-static-3.1 -I/_BUILDPATH_/include -I/usr/x86_64-w64-mingw32/include -O2 -std=gnu++11 -Wno-deprecated-declarations  /_BUILDPATH_/src/msw/uxtheme.cpp
/_BUILDPATH_/src/msw/tooltip.cpp:139:1: error: expected class-name before ‘{’ token
 {
 ^
/_BUILDPATH_/src/msw/tooltip.cpp:145:18: error: ‘virtual bool wxToolTipModule::OnInit()’ marked ‘override’, but does not override
     virtual bool OnInit() wxOVERRIDE
                  ^
/_BUILDPATH_/src/msw/tooltip.cpp:150:18: error: ‘virtual void wxToolTipModule::OnExit()’ marked ‘override’, but does not override
     virtual void OnExit() wxOVERRIDE
                  ^
In file included from /_BUILDPATH_/include/wx/object.h:57:0,
                 from /_BUILDPATH_/include/wx/msw/tooltip.h:14,
                 from /_BUILDPATH_/include/wx/tooltip.h:19,
                 from /_BUILDPATH_/src/msw/tooltip.cpp:27:
/_BUILDPATH_/src/msw/tooltip.cpp:159:44: error: ‘wxModule’ has not been declared
 wxIMPLEMENT_DYNAMIC_CLASS(wxToolTipModule, wxModule);
                                            ^
/_BUILDPATH_/include/wx/rtti.h:154:14: note: in definition of macro ‘wxIMPLEMENT_CLASS_COMMON’
             &basename::ms_classInfo,                                          \
              ^
/_BUILDPATH_/include/wx/rtti.h:174:5: note: in expansion of macro ‘wxIMPLEMENT_CLASS_COMMON1’
     wxIMPLEMENT_CLASS_COMMON1(name, basename, name::wxCreateObject)           \
     ^
/_BUILDPATH_/src/msw/tooltip.cpp:159:1: note: in expansion of macro ‘wxIMPLEMENT_DYNAMIC_CLASS’
 wxIMPLEMENT_DYNAMIC_CLASS(wxToolTipModule, wxModule);
 ^
/_BUILDPATH_/src/msw/tooltip.cpp: In static member function ‘static wxObject* wxToolTipModule::wxCreateObject()’:
/_BUILDPATH_/src/msw/tooltip.cpp:159:27: error: cannot convert ‘wxToolTipModule*’ to ‘wxObject*’ in return
 wxIMPLEMENT_DYNAMIC_CLASS(wxToolTipModule, wxModule);
                           ^
/_BUILDPATH_/include/wx/rtti.h:176:22: note: in definition of macro ‘wxIMPLEMENT_DYNAMIC_CLASS’
         { return new name; }
                      ^
Makefile:31012: recipe for target 'corelib_msw_tooltip.o' failed
make: *** [corelib_msw_tooltip.o] Error 1
make: *** Waiting for unfinished jobs....
